fix size logo on mobile

--- a/app/components/nav/navbar.module.css
+++ b/app/components/nav/navbar.module.css
@@ -27,6 +27,16 @@
     }
   }
 
+  .logo-image{
+    width: 120px;
+  }
+
+  @media (max-width: 768px) {
+    .logo-image{
+      width: 80px;
+    }
+  }
+
 .links-container{
     margin-right: 44px;
     display: flex;
